--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <h1>Hi, I'm Dele - a UI/UX Designer</h1>
           <h3>
             Hi, I'm Dele - a UI/UX Designer
-            I'm 27 years old Lagos-based UI/UX Designer. My job is to create easy-to-use and aesthetically pleasant interfaces by analysing the users' needs and researching the best ways to create usable and successful products for start-ups and established organisation. I have experience with remote working wireframing, prototyping and usability testing and I have done works like fintech app educational app cryptocurreny and creative apps.
+            I'm 27 years old Lagos-based UI/UX Designer. My job is to create easy-to-use and aesthetically pleasant interfaces by analyzing the users' needs and researching the best ways to create usable and successful products for start-ups and established organizations. I have experience with remote working wireframing, prototyping, and usability testing and I have done works like fintech app educational app cryptocurrency and creative apps.
           </h3>
         </div>
       </div>
