--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               An app that helps secondary school students prepare for their exams.
             </p>
           </div>
-          <div class="box">
+          <div class="box insure">
             <div class="card">
               <img class="card-img" src="img/insurance.png" alt="" />
             </div>
