--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         </div>
         <div class="boxes">
-          <div class="box">
+          <div class="box lms">
             <div class="card">
               <img class="card-img" src="img/edu.png" alt="" />
             </div>
