--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
               A financial platform for savings and investments.
             </p>
           </div>
-          <div class="box">
+          <div class="box lq">
             <div class="card">
               <img class="card-img" src="img/lodgequick.png" alt="" />
             </div>
-            <h3>LodgeQuick Mobile App</h3>
+            <h3>LodgeQuick website</h3>
             <p>
               A platform that helps users lodge in private properties for vacations.
             </p>
