--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
         <div class="hero">
           <h1>Hi, I'm Dele - a UI/UX Designer</h1>
           <h3>
-            Hi, I'm Dele - a UI/UX Designer
-            I'm 27 years old Lagos-based UI/UX Designer. My job is to create easy-to-use and aesthetically pleasant interfaces by analyzing the users' needs and researching the best ways to create usable and successful products for start-ups and established organizations. I have experience with remote working wireframing, prototyping, and usability testing and I have done works like fintech app educational app cryptocurrency and creative apps.
+            I'm 27 years old Lagos-based UI/UX Designer. My job is to create easy-to-use and aesthetically pleasant interfaces by analysing the users' needs and researching the best ways to create usable and successful products for start-ups. User-centered designs come from a user-centered workflow: as a User experience Designer I understand the importance of research. wireframing. prototyping. and usability testing. Pixels aren't but a small yet fascinating part of Product Design. I have experience with remote working.
           </h3>
         </div>
       </div>
@@ -77,11 +76,11 @@
               A financial platform for savings and investments.
             </p>
           </div>
-          <div class="box lq">
+          <div class="box">
             <div class="card">
               <img class="card-img" src="img/lodgequick.png" alt="" />
             </div>
-            <h3>LodgeQuick website</h3>
+            <h3>LodgeQuick Mobile App</h3>
             <p>
               A platform that helps users lodge in private properties for vacations.
             </p>
@@ -90,7 +89,7 @@
 
         </div>
         <div class="boxes">
-          <div class="box lms">
+          <div class="box">
             <div class="card">
               <img class="card-img" src="img/edu.png" alt="" />
             </div>
@@ -105,6 +104,33 @@
             </p>
           </div>
           <div class="box insure">
+            <div class="card">
+              <img class="card-img" src="img/insurance.png" alt="" />
+            </div>
+            <h3>Insurance Mobile App</h3>
+            <p>
+              A platform that provides it's users with various insurance plans.
+            </p>
+          </div>
+       
+
+        </div>
+        <div class="boxes">
+          <div class="box">
+            <div class="card">
+              <img class="card-img" src="img/sal.png" alt="" />
+            </div>
+            <!-- <img
+              class="box-title sm-logo"
+              src="img/rosabon.svg"
+              alt=""
+            /> -->
+            <h3>Food Restaurant Website</h3>
+            <p>
+              A restaurant that focuses on offering well dressed salads ordered via checklist menu & signature salads ordered via la carte.
+            </p>
+          </div>
+          <div class="box insure hide">
             <div class="card">
               <img class="card-img" src="img/insurance.png" alt="" />
             </div>
