--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
         </div>
         <div class="boxes">
-          <div class="box">
+          <div class="box rest">
             <div class="card">
               <img class="card-img" src="img/sal.png" alt="" />
             </div>
