--- a/index.html
+++ b/index.html
@@ -122,9 +122,7 @@
 
         </div>
         <div class="boxes">
-     
-          </div>
-            <div class="box">
+            <div class="box lq">
             <div class="card">
               <img class="card-img" src="img/lodgequick.png" alt="" />
             </div>
@@ -132,6 +130,8 @@
             <p>
               A platform that helps users lodge in private properties for vacations.
             </p>
+          </div>
+            
           <div class="box insure hide">
             <div class="card">
               <img class="card-img" src="img/insurance.png" alt="" />
