--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="hero">
           <h1>Hi, I'm Dele - a UI/UX Designer</h1>
           <h3>
-            I'm 27 years old Lagos-based UI/UX Designer. My job is to create easy-to-use and aesthetically pleasant interfaces by analysing the users' needs and researching the best ways to create usable and successful products for start-ups. User-centered designs come from a user-centered workflow: as a User experience Designer I understand the importance of research. wireframing. prototyping. and usability testing. Pixels aren't but a small yet fascinating part of Product Design. I have experience with remote working.
+            I'm a UI/UX Designer. My job is to create easy-to-use and aesthetically pleasant interfaces by analysing the users' needs and researching the best ways to create usable and successful products for start-ups. User-centered designs come from a user-centered workflow: as a User experience Designer I understand the importance of research. wireframing. prototyping. and usability testing. Pixels aren't but a small yet fascinating part of Product Design. I have experience with remote working.
           </h3>
         </div>
       </div>
