--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
             </p>
           </div>
             
-          <div class="box insure hide">
+          <div class="box insure ">
             <div class="card">
-              <img class="card-img" src="img/insurance.png" alt="" />
+              <img class="card-img" src="img/iPhone XS - Space Gray.png" alt="" />
             </div>
-            <h3>Insurance Mobile App</h3>
+            <h3>Crypto Currency Mobile App</h3>
             <p>
-              A platform that provides it's users with various insurance plans.
+              A Crypto Currency App dsigned to view market analysis, currency charts, scanning bar code to recieve and send coins, setting up portfolios and lots more.
             </p>
           </div>
        
