--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </p>
           </div>
             
-          <div class="box insure ">
+          <div class="box Crypto ">
             <div class="card">
               <img class="card-img" src="img/iPhone XS - Space Gray.png" alt="" />
             </div>
