--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </div>
           <h3>Crypto Currency Mobile App</h3>
           <p>
-            A Crypto Currency App dsigned to view market analysis, currency charts, scanning bar code to recieve and send coins, setting up portfolios and lots more.
+            A Crypto Currency App designed to view market analysis, currency charts, scanning bar code to receive and send coins, setting up portfolios and lots more.
           </p>
         </div>
      
