--- a/avatlandingpage.html
+++ b/avatlandingpage.html
@@ -30,7 +30,7 @@
                 <div class="overview-2">
                     <div class="overview-1-1">
                         <p>Overview</p>
-                        <p class="overview-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore assumenda provident ratione repudiandae architecto, dicta odio soluta molestiae sequi!
+                        <p class="overview-text">A high-quality and eye-catching crypto wallet app, blockchain app and exchange websites.
                     </p>
                     </div>
                     <div class="overview-1-1">
@@ -95,5 +95,8 @@
           </div>
         </div>
       </section>
+      <section class="b2h">
+        <a href="index.html">Back to Home</a>
+    </section>
 </body>
 </html>
