--- a/fashion.html
+++ b/fashion.html
@@ -29,7 +29,7 @@
                 <div class="overview-2">
                     <div class="overview-1-1">
                         <p>Overview</p>
-                        <p class="overview-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore assumenda provident ratione repudiandae architecto, dicta odio soluta molestiae sequi!
+                        <p class="overview-text">A Professional and Modern Shopify store for your clothing, fashion and boutique brand.
                     </p>
                     </div>
                     <div class="overview-1-1">
@@ -80,7 +80,7 @@
             <div class="container">
                 <p>Next Project</p>
                 <h2>Fintech Website</h2>
-                <button class="btn" onclick="window.location.href='music.html';" >View project</button>
+                <button class="btn" onclick="window.location.href='fluffy.html';" >View project</button>
             </div>
     </section>
     <section id="contact">
@@ -94,5 +94,8 @@
           </div>
         </div>
       </section>
+      <section class="b2h">
+        <a href="index.html">Back to Home</a>
+    </section>
 </body>
 </html>
