--- a/fluffy.html
+++ b/fluffy.html
@@ -30,7 +30,7 @@
                 <div class="overview-2">
                     <div class="overview-1-1">
                         <p>Overview</p>
-                        <p class="overview-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore assumenda provident ratione repudiandae architecto, dicta odio soluta molestiae sequi!
+                        <p class="overview-text">A user-friendly fintech website with an innovative modern fresh look, a platform for savings and investments.
                     </p>
                     </div>
                     <div class="overview-1-1">
@@ -81,7 +81,7 @@
             <div class="container">
                 <p>Next Project</p>
                 <h2>Crypto Landing Page</h2>
-                <button class="btn" onclick="window.location.href='music.html';" >View project</button>
+                <button class="btn" onclick="window.location.href='avatlandingpage.html';" >View project</button>
             </div>
     </section>
     <section id="contact">
@@ -95,5 +95,8 @@
           </div>
         </div>
       </section>
+      <section class="b2h">
+        <a href="index.html">Back to Home</a>
+    </section>
 </body>
 </html>
