--- a/food.html
+++ b/food.html
@@ -24,13 +24,12 @@
         <div class="container">
             <div class="overview-cont">
                 <div class="overview-1">
-                    <p>Rosabon Financial</p>
-                    <h2>Designing a Fintech landing page.</h2>
+                    <h2>Designing a Food Restaurant landing page.</h2>
                 </div>
                 <div class="overview-2">
                     <div class="overview-1-1">
                         <p>Overview</p>
-                        <p class="overview-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempore assumenda provident ratione repudiandae architecto, dicta odio soluta molestiae sequi!
+                        <p class="overview-text">A restaurant that focuses on offering well dressed salads ordered via checklist menu & signature salads ordered via la carte.
                     </p>
                     </div>
                     <div class="overview-1-1">
@@ -81,7 +80,7 @@
             <div class="container">
                 <p>Next Project</p>
                 <h2>Fashion Store Landing Page</h2>
-                <button class="btn" onclick="window.location.href='fashion.html';" >View project</button>
+                <button class="btn" onclick="window.location.href='https://dele7.github.io/avat-crypto/';" >View project</button>
             </div>
     </section>
     <section id="contact">
@@ -94,6 +93,9 @@
             <a href="tel:+2348109177398">+2348109177398</a>
           </div>
         </div>
+      </section>
+      <section class="b2h">
+          <a href="index.html">Back to Home</a>
       </section>
 </body>
 </html>
