--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="hero">
           <h1>Hi, I'm Dele - a UI/UX Designer</h1>
           <h3>
-            I'm a UI/UX Designer. My job is to create easy-to-use and aesthetically pleasant interfaces by analysing the users' needs and researching the best ways to create usable and successful products for start-ups. User-centered designs come from a user-centered workflow: as a User experience Designer I understand the importance of research. wireframing. prototyping. and usability testing. Pixels aren't but a small yet fascinating part of Product Design. I have experience with remote working.
+            A skilled UI UX Designer with over 2 years of expertise working with technologies such as AIPA, GOLO, PUNCH and VASITI, Commited to producing designs that satisfy users needs and foster business expansion, Effective problem solver with the ability to complete projects on schedule.
           </h3>
         </div>
       </div>
@@ -79,7 +79,7 @@
           </div>
           <h3>Fashion Store landing Page</h3>
           <p>
-           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam pariatur porro neque nostrum deserunt minus vero? In error nam excepturi.
+            A Professional and Modern Shopify store for your clothing, fashion and boutique brand.
           </p>
           <a class="img-text" href="./fashion.html">View Project</a>
 
@@ -100,7 +100,7 @@
           /> -->
           <h3>Fintech Website</h3>
           <p>
-            A financial platform for savings and investments.
+            A user-friendly fintech website with an innovative modern fresh look, a platform for savings and investments.
           </p>
           <a class="img-text" href="./fluffy.html">View Project</a>
         </div>
@@ -111,7 +111,7 @@
           </div>
           <h3>Crypto Currency Landing Page</h3>
           <p>
-            A Crypto Currency App designed to view market analysis, currency charts, scanning bar code to receive and send coins, setting up portfolios and lots more.
+            A high-quality and eye-catching crypto wallet app, blockchain app and exchange websites.
           </p>
           <a class="img-text" href="./avatlandingpage.html">View Project</a>
         </div>
